@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: May 1, 2015</p>
+      <p>Last Updated: May 18, 2015</p>
     </td>
   </tr>
 </table>
@@ -1330,7 +1330,7 @@
       <li><a href="#arm926ejs">ARM926EJS</a> (4)</li>
       <li><a href="#armcortexa5">ARM Cortex-A5</a> (2)</li>
       <li><a href="#armcortexa8">ARM Cortex-A8</a> (1)</li>
-      <li><a href="#armcortexm0">ARM Cortex-M0/M0+</a> (4)</li>
+      <li><a href="#armcortexm0">ARM Cortex-M0/M0+</a> (5)</li>
       <li><a href="#armcortexm3">ARM Cortex-M3</a> (32)</li>
       <li><a href="#armcortexm4">ARM Cortex-M4</a> (20)</li>
       <li><a href="#armcortexm7">ARM Cortex-M7</a> (1)</li>
@@ -1402,6 +1402,7 @@
       <li><a href="#avrat90usbxxx">AVR AT90USB64x and AT90USB6128x</a> <small>(8-bit AVR)</small></li>
       <li><a href="#at32uc3bxxx">AVR32 AT32UC3BXXX</a> <small>(32-bit AVR32)</small></li>
       <li><a href="#at91samd20">Atmel SAMD20</a> <small>(ARM Cortex-M0+)</small></li>
+      <li><a href="#at91saml21">Atmel SAML21</a> <small>(ARM Cortex-M0+)</small></li>
       <li><a href="#at91sam3u">Atmel SAM3U</a> <small>(ARM Cortex-M3)</small></li>
       <li><a href="#at91sam3x">Atmel SAM3X</a> <small>(ARM Cortex-M3)</small></li>
       <li><a href="#at91sam4c">Atmel SAM4C</a> <small>(ARM Cortex-M4)</small></li>
@@ -2225,6 +2226,28 @@ nsh>
         An SPI driver was also included to support the OLED1 and I/O1 modules.
         That SPI driver, however, was not completed verified due to higher priority tasks that came up (I hope to get back to this later).
         Refer to the SAMD20 Explained Pro board <a href="http://sourceforge.net/p/nuttx/git/ci/master/tree/nuttx/configs/samd20-xplained/README.txt">README</a> file for further information.
+      </p>
+    </ul>
+  </td>
+</tr>
+<tr>
+  <td><br></td>
+  <td><hr></td>
+</tr>
+<tr>
+  <td><br></td>
+  <td>
+    <p>
+      <a name="at91saml21"><b>Atmel SAML21</b>.</a>
+      The port of NuttX to the Atmel SAML21-Xplained Pro development board.
+      This board features the ATSAML21J18A MCU (Cortex-M0+ with 256KB of FLASH and 32KB of SRAM).
+    </p>
+    <ul>
+      <p>
+        <b>STATUS</b>.
+        This is a work in progress.
+        Initial support for the SAML21 Xplained Pro is expected in the NuttX 7.10 timeframe.
+        Refer to the SAML21 Explained Pro board <a href="http://sourceforge.net/p/nuttx/git/ci/master/tree/nuttx/configs/saml21-xplained/README.txt">README</a> file for further information.
       </p>
     </ul>
   </td>
