@@ -10393,3 +10393,7 @@
 	  signal/sig_timed*.c, timer/timer_settime.c, and wdog/wd_start.c:
 	  Update the type passed to watchdog timer handlers.  Using uint32_t is
 	  a problem for 64-bit machines (2015-05-18).
+	* configs/saml21-xplained:  Add a board build configuration for the
+	  SAML21 Xplained Pro.  Initial commit is just the SAMD20 Xplained Pro
+	  board support with naming changed.  Does not yet build (2015-05-18).
+
